--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="200dp">
     <ImageView
         android:id="@+id/iv_movie_poster"
-        android:padding="16dp"
+        android:padding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
